--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="api_key">DEMO_KEY</string>
     <string name="app_name">AC APOD</string>
     <string name="all_apod">APOD</string>
     <string name="bottom_nav_home">Home</string>
@@ -9,4 +10,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="normal">Normal</string>
     <string name="hd">HD</string>
+    <string name="learn_more">Learn more</string>
 </resources>
